--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,34 @@
+# Dependencies
+node_modules/
+pnpm-lock.yaml
+yarn.lock
+package-lock.json
+
+# Build Output
+dist/
+build/
+out/
+
+# Environment Variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# System
+.DS_Store
+Thumbs.db
+.idea/
+.vscode/
+*.log
+*.log*
+
+# Python (Legacy Backend)
 __pycache__/
 *.pyc
 *.pyo
 *.pyd
-.Python
-*.so
-*.egg
+.venv
+venv/
 *.egg-info/
-dist/
-build/
-tmp/
-.DS_Store
-node_modules/
-.env.local
-.env.production
