--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ package-lock.json
 dist/
 build/
 out/
+.next/
 
 # Environment Variables
 .env
@@ -16,6 +17,12 @@ out/
 .env.test.local
 .env.production.local
 
+# Cache & Runtime
+.vite/
+.vercel/
+.turbo/
+.swc/
+
 # System
 .DS_Store
 Thumbs.db
@@ -23,12 +30,3 @@ Thumbs.db
 .vscode/
 *.log
 *.log*
-
-# Python (Legacy Backend)
-__pycache__/
-*.pyc
-*.pyo
-*.pyd
-.venv
-venv/
-*.egg-info/
